Ajout d'un test unitaire manquant #28